Fixed a bug where long running text would be cut off

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -59,7 +59,12 @@ body{
 }
 
 .book-entry-details {
+  padding-right: 15px;
   display: inline-block;
+}
+
+.book {
+  width: 90%;
 }
 
 .book-entry-details > * {
